clusters/local/apps/example/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example
spec:
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
